Feat: Test unitarios para AuthService y CustomUserDetailService